fix: correct row-gap in pets slider

--- a/shelter/pages/main/styles/_our-friends.scss
+++ b/shelter/pages/main/styles/_our-friends.scss
@@ -49,7 +49,7 @@
     .slider {
       flex-wrap: wrap;
       justify-content: center;
-      row-gap: 20x;
+      row-gap: 20px;
       column-gap: 80px;
       margin-bottom: 5px;
 
